--- a/src/Components/Account/BankCardManage/BankCardManage.scss
+++ b/src/Components/Account/BankCardManage/BankCardManage.scss
@@ -35,10 +35,10 @@
     font-size: 14px;
     .a_aa_form{
         @include wh(825px,428px);
-        border: 1px solid #ccc;
+        //border: 1px solid #ccc;
         margin: 0 auto;
-        padding: 30px 60px;
-        background-color: #F9F9F9;
+        padding: 20px 60px;
+        //background-color: #F9F9F9;
     }
     .a_aa_list{
         li{
