--- a/src/Components/Home/HomeMainLeft/HomeMainLeft.scss
+++ b/src/Components/Home/HomeMainLeft/HomeMainLeft.scss
@@ -7,6 +7,7 @@
     bottom: 0;
     @include wh(357px, 364px);
     background: url(../Img/active_left.png) no-repeat center center;
+    z-index: 8;
     .home_m_info_controler{
         height: 120px;
         overflow: hidden;
