--- a/src/Components/Common/ChildNav/ChildNav.scss
+++ b/src/Components/Common/ChildNav/ChildNav.scss
@@ -5,6 +5,7 @@
     background-color: #3E3E49;
     color: #fff;
     padding-left: 15px;
+    font-size: 14px;
     @include lh(45px);
     .nav_list{
         li{
