--- a/src/Components/Home/HomeMainActive/HomeMainActive.scss
+++ b/src/Components/Home/HomeMainActive/HomeMainActive.scss
@@ -9,21 +9,22 @@
         width: $nav_width_1200;
         margin: 0 auto;
         .home_favourable_active{
-            @include wh(180px, 100px);
-            margin: 0 auto;
             padding-top: 40px;
             background: url(../Img/home_favourable_active.png) no-repeat top center;
             text-align: center;
-            p{
-                font-size: 24px;
-                color: $color_363636;
-                i{
-                    font-style: normal;
-                }
+
+        }
+        p{
+            font-size: 24px;
+            color: $color_363636;
+            text-align: center;
+            i{
+                font-style: normal;
             }
-            h5{
-                font-size: 12px;
-            }
+        }
+        h5{
+            font-size: 12px;
+            text-align: center;
         }
         .home_m_active_list{
             margin-top: 25px;
