--- a/src/Style/variables.scss
+++ b/src/Style/variables.scss
@@ -8,3 +8,4 @@ $color_363636: #363636;
 $color_CF2027: #CF2027;
 $background-color-F4F4F4: #F4F4F4;
 $border-bottom-color: #D6D6D6;
+$border-color: #B2B2B2;
