--- a/src/Components/Financial/MentionFillingRecord/MentionFillingRecord.scss
+++ b/src/Components/Financial/MentionFillingRecord/MentionFillingRecord.scss
@@ -1,53 +1,23 @@
 @import '../../../Style/variables';
 @import '../../../Style/mixin';
 
-.self_table{
+.mention_filling_record{
     .team_list_top{
         padding: 30px 20px 13px;
         border-bottom: 1px solid #ccc;
-        background-color: #fff;
         .t_l_time{
             padding-bottom: 15px;
             .t_m_date_classify{
                 display: inline-block;
-                width: 100px;
+                width: 70px;
                 text-align: right;
+                margin-right: 8px;
             }
             .t_l_time_row{
                 @include lh(30px);
                 margin-bottom: 12px;
                 li{
                     float: left;
-                }
-            }
-            .t_m_line{
-                margin: 3px 20px 0;
-                height: 22px;
-                border-left: 1px solid #AFAFAF;
-            }
-            .t_l_time_btn{
-                box-sizing: border-box;
-                @include lh(30px);
-                li{
-                    box-sizing: border-box;
-                    @include lh(30px);
-                    padding: 0 8px;
-                    border:1px solid $border-color;
-                    margin-right: 3px;
-                    &:hover{
-                        cursor: pointer;
-                        background-color: #ddd;
-                    }
-                }
-                li:not(:first-child){
-                    border-left:1px solid $border-color;
-                }
-                .t_l_time_btn_active{
-                    box-sizing: border-box;
-                    height: 30px;
-                    border:1px solid #CB1313 !important;
-                    color:#CB1313;
-                    background: #FFF5F5 url('./Img/time_active.png') no-repeat right bottom;
                 }
             }
             .t_l_classify{
@@ -88,19 +58,6 @@
                 }
             }
         }
-        .t_m_select_lottery{
-            padding: 0 5px 0;
-            height: 0;
-            overflow: hidden;
-            @include transform(height, 0.3s);
-            .ant-radio-wrapper{
-                margin: 10px 25px 0 0;
-            }
-        }
-        .t_m_select_lottery_show{
-            height: 60px;
-            border-top: 1px dotted #8B8D92;
-        }
     }
     .t_l_table{
         background-color: #F4F4F4;
@@ -114,18 +71,21 @@
             float: right;
             margin-top: 8px;
         }
-        .ant-select-selection{
-            @include borderRadius(4px);
-        }
         .ant-pagination-options-size-changer{
             margin-right: 0;
         }
     }
-    .t_l_active{
-        box-sizing: border-box;
-        height: 28px;
-        border:1px solid #CB1313 !important;
-        color:#CB1313;
-        background: #FFF5F5 url('./Img/time_active.png') no-repeat right bottom;
+    .mention_filling_record_footer{
+        text-align: center;
+        span:first-child{
+            margin-right: 40px;
+        }
+        strong{
+            font-weight: normal;
+        }
     }
+    .ant-input, .ant-select-selection{
+        @include borderRadius(0);
+    }
+
 }
