--- a/src/Components/Login/Login.scss
+++ b/src/Components/Login/Login.scss
@@ -5,6 +5,9 @@
 .login{
     background-image: radial-gradient(ellipse farthest-corner at center top, #000d4d 0%, #000105 100%);
     cursor:move;
+    #canvas{
+        //position: absolute; width: 100%; height: 100%;
+    }
     .login_main{
         width: 820px;
         position: absolute;
