--- a/src/Components/Common/RightPlug/Rightplug.scss
+++ b/src/Components/Common/RightPlug/Rightplug.scss
@@ -1,3 +1,22 @@
-.right_list{
+@import '../../../Style/variables';
+@import '../../../Style/mixin';
 
+.right_plug{
+    position: fixed;
+    right: 0;
+    top: 30%;
+    background-color: #4A4A5F;
+    width: 70px;
+    z-index: 99;
+    .right_list{
+        li{
+            text-align: center;
+            height: 55px;
+            padding-top: 12px;
+            &:hover{
+                cursor: pointer;
+                background-color: #A30404;
+            }
+        }
+    }
 }
