--- a/src/Components/Lottery/RightSider/RightSider.scss
+++ b/src/Components/Lottery/RightSider/RightSider.scss
@@ -62,6 +62,7 @@
     background-color: #fff;
     padding-bottom: 24px;
     width: 210px;
+    @include boxS(0, 4px, 18px, 0, #c3c3c3, null);
     .thead_title{
         background-color: #8D887B;
         font-size: 14px;
