--- a/src/Style/mixin.scss
+++ b/src/Style/mixin.scss
@@ -23,6 +23,17 @@ $fc:#fff;
     -moz-box-shadow: $h $v $blur $spread $color $inset;
 }
 
+@mixin gradient($start, $end, $sColor, $endR, $endG, $endB, $endA){
+    background: #ccc;
+    background: -moz-linear-gradient(top,  #000000 0%, #ffffff 100%);
+    background: -webkit-gradient(linear, 0 18.5, 0 bottom, from(#ffffff), to(rgba(225, 225, 225, 0.8)));
+    background: -webkit-linear-gradient(top,  #000000 0%,#ffffff 100%);
+    background: -o-linear-gradient(top,  #000000 0%,#ffffff 100%);
+    background: -ms-linear-gradient(top,  #000000 0%,#ffffff 100%);
+    background: linear-gradient(to bottom,  #000000 0%,#ffffff 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#ffffff',GradientType=0 );
+}
+
 //倒三角形
 @mixin sj($t,$r,$b,$bc){
     position: absolute;
