--- a/src/Style/vender/antd.css
+++ b/src/Style/vender/antd.css
@@ -15623,11 +15623,12 @@ textarea.ant-pagination-options-quick-jumper input {
 .ant-table-small .ant-table-header > table,
 .ant-table-small .ant-table-body > table {
   border: 0;
-  padding: 0 8px;
+  /*padding: 0 8px;*/
 }
 .ant-table-small .ant-table-thead > tr > th {
-  background: #fff;
-  border-bottom: 1px solid #e9e9e9;
+  background: #F8F7F4;
+  border-bottom: 1px solid #DCDCDC;
+
 }
 .ant-table-small .ant-table-tbody > tr > td {
   padding: 6px 8px;
