--- a/src/Components/Common/HeaderNav/headerNav.scss
+++ b/src/Components/Common/HeaderNav/headerNav.scss
@@ -11,209 +11,116 @@ $width_100: 100%;
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 9;
-}
-.nav_top{
-    @include wh($width_100, 40px);
-    line-height: 40px;
-    background: #A30404;
-    .nav_top_content{
-        width: $nav_width_1200;
-        margin: 0 auto;
-        color: #fff;
-        a{
-            color: #fff;
-        }
-    }
-    .n_t_lt{
-        padding-left: 25px;
-        background: url(./Img/notice_icon.png) no-repeat center left;
-    }
-    .n_t_list>li{
-        padding: 0 15px;
-        float: left;
-        border-left: 1px solid #770000;
-        &:hover{
-            background: #770000;
-        }
-        &:last-child{
-            border-right: 1px solid #770000;
-        }
-    }
-    .n_t_list{
-        .n_t_position{
-            position: relative;
-            &:hover .n_t_controler{
-                height: 180px;
-                @include transform(height, 0.3s);
-            }
-        }
-        .n_t_controler{
-            position: absolute;
-            top: 40px;
-            left: -77px;
-            z-index: 99999;
-            height: 0;
-            overflow: hidden;
-        }
-        .n_t_drop_down{
-            padding-top: 10px;
-            .n_t_down_list{
-                @include wh(300px, 168px);
-                border: 1px solid #FFDB70;
-                background-color: #1D1D26;
-                color: #D0D0D0;
-                padding: 8px 12px 0;
-                &:before{
-                    @include icon_arrows_bg(5px,140px,#FFDB70,10px,#1D1D26,-45deg);
-                }
-                li{
-                    @include lh(31px);
-                    border-bottom: 1px dotted #7A7A7E;
-                    &:hover{
-                        cursor: auto;
-                    }
-                    &:last-child{
-                        border-bottom: 0;
-                        cursor: pointer;
-                    }
-                }
-                .n_t_exit{
-                    width: 80px;
-                    margin: 0 auto;
-                    padding-left: 20px;
-                    background: url(./Img/exit_icon.png) no-repeat center left;
-                }
-                .color_DFC674{
-                    color: #DFC674;
-                }
-            }
-        }
-        .n_t_cursor:hover{
-            cursor: pointer;
-        }
-        .n_t_cursor_color:hover{
-            cursor: pointer;
-            color: #FFDB70;
-        }
-        .n_t_message{
-            width: 80px;
-        }
-
-        .n_t_balance_p{
-            position: relative;
-            &:hover .n_t_controler{
-                height: 240px;
-                @include transform(height, 0.3s);
-            }
-            .n_t_down_list{
-                @include wh(200px, 230px);
-                &:before{
-                    @include icon_arrows_bg(5px,100px,#FFDB70,10px,#1D1D26,-45deg);
-                }
-            }
-            .n_t_controler{
-                left: -6px;
-            }
-            .n_t_exit{
-                background: url(./Img/update_money.png) no-repeat center left !important;
-            }
-        }
-        .ant-badge-count{
-            @include lh(17px);
-            padding: 0 4px;
-            background:#1E1E1E;
-            box-shadow: none;
-            -webkit-transform: translateX(-10%);
-            -ms-transform: translateX(-10%);
-            transform: translateX(-10%);
-        }
-        .n_t_balance{
-            color: #FFDB70;
-            i{
-                font-style: normal;
-            }
-
-        }
-        .n_t_hide_balance{
-            padding: 0 5px;
-            &:hover{
-                cursor: pointer;
-            }
-        }
-    }
-     .anticon-caret-down{
-         font-size: 12px;
-         color: #610000;
-    }
-}
-.nav{
-    @include wh($width_100, $nav-height);
-    background: $nav-background-color;
-    .nav-content{
-        width: $nav_width_1200;
-        margin: 0 auto;
-        .logo{
-            margin-top: 7.5px;
-        }
-        .menus {
-            position: relative;
-            float: right;
-            font-size: 14px;
-        }
-    }
-    .nav-text{
-        height: ($nav-height)-3;
-        text-align: center;
-        p{
-            line-height: 20px;
-        }
-        p:nth-child(2){
-            font-size: 10px;
-            color: #868686;
-        }
-        a{
-            width: 96px;
-            height: ($nav-height)-3;
-            padding-top: 22px;
-            display: inline-block;
-            color: #fff;
-            &:hover{
-                p{
-                    color: $hover-color;
-                }
-            }
-        }
-    }
-
-    .ant-menu-item:hover, .ant-menu-item-active, .ant-menu:not(.ant-menu-inline) .ant-menu-submenu-open, .ant-menu-submenu-active, .ant-menu-submenu-title:hover {
-        color: $hover-color;
-    }
-    .ant-dropdown-link{
-        color: #fff;
-    }
-    .ant-menu-horizontal{
-        border: 0;
-    }
-    .ant-menu{
+    z-index: 9999;
+    .nav{
+        @include wh($width_100, $nav-height);
         background: $nav-background-color;
-        color: #fff;
-    }
+        .nav-content{
+            width: $nav_width_1200;
+            margin: 0 auto;
+            .logo{
+                margin-top: 7.5px;
+            }
+            .menus {
+                position: relative;
+                float: right;
+                font-size: 14px;
+            }
+        }
+        .nav-text{
+            height: ($nav-height)-3;
+            text-align: center;
+            p{
+                line-height: 20px;
+            }
+            p:nth-child(2){
+                font-size: 10px;
+                color: #868686;
+            }
+            a{
+                width: 96px;
+                height: ($nav-height)-3;
+                padding-top: 22px;
+                display: inline-block;
+                color: #fff;
+                &:hover{
+                    p{
+                        color: $hover-color;
+                    }
+                }
+            }
+        }
 
-    .ant-menu-horizontal > .ant-menu-item:hover, .ant-menu-horizontal > .ant-menu-submenu:hover, .ant-menu-horizontal > .ant-menu-item-active, .ant-menu-horizontal > .ant-menu-submenu-active, .ant-menu-horizontal > .ant-menu-item-open, .ant-menu-horizontal > .ant-menu-submenu-open, .ant-menu-horizontal > .ant-menu-item-selected, .ant-menu-horizontal > .ant-menu-submenu-selected{
-        border-bottom: 3px solid $hover-color;
-        color: $hover-color;
-    }
-    .ant-menu-item, .ant-menu-submenu-title{
-        padding: 0;
-    }
-    .ant-menu-submenu-horizontal, .ant-menu-submenu{
-        .ant-menu{
-            background: rgba(27,27,33,.8);
+        .ant-menu-item:hover, .ant-menu-item-active, .ant-menu:not(.ant-menu-inline) .ant-menu-submenu-open, .ant-menu-submenu-active, .ant-menu-submenu-title:hover {
+            color: $hover-color;
+        }
+        .ant-dropdown-link{
             color: #fff;
+        }
+        .ant-menu-horizontal{
+            border: 0;
+        }
+        .ant-menu{
+            background: $nav-background-color;
+            color: #fff;
+        }
+
+        .ant-menu-horizontal > .ant-menu-item:hover, .ant-menu-horizontal > .ant-menu-submenu:hover, .ant-menu-horizontal > .ant-menu-item-active, .ant-menu-horizontal > .ant-menu-submenu-active, .ant-menu-horizontal > .ant-menu-item-open, .ant-menu-horizontal > .ant-menu-submenu-open, .ant-menu-horizontal > .ant-menu-item-selected, .ant-menu-horizontal > .ant-menu-submenu-selected{
+            border-bottom: 3px solid $hover-color;
+            color: $hover-color;
+        }
+        .ant-menu-item, .ant-menu-submenu-title{
+            padding: 0;
+        }
+        .ant-menu-submenu-horizontal, .ant-menu-submenu{
+            .ant-menu{
+                background: rgba(27,27,33,.8);
+                color: #fff;
+            }
+        }
+    }
+    .lottery_name{
+        &:hover .lottery_name_type{
+            height: 225px;
+        }
+    }
+    .lottery_name_type{
+        position: absolute;
+        top: 80px;
+        left: -528px;
+        background-color: #1b1b21;
+        height: 0;
+        width: 1200px;
+        overflow: hidden;
+        @include transform(height, 0.3s);
+        &:hover{
+            cursor: auto;
+        }
+        .l_n_list{
+            float: left;
+            color:#fff;
+            padding-top: 20px;
+            font-size: 14px;
+            margin: 0 40px;
+            li{
+                height: 30px;
+                &:hover{
+                    cursor: pointer;
+                }
+            }
+            li:first-child{
+                color:#E8CB75
+            }
+        }
+        .l_n_t_p{
+            text-align: center;
+            //transform: translateX(-50%);
+            //margin-left: 55%;
         }
     }
 }
+
+
 
 
 
