--- a/src/Components/Report/SelfTable/SelfTable.scss
+++ b/src/Components/Report/SelfTable/SelfTable.scss
@@ -3,7 +3,7 @@
 
 .self_table{
     .team_list_top{
-        padding: 30px 20px 13px;
+        padding: 30px 30px 13px;
         border-bottom: 1px solid #ccc;
         background-color: #fff;
         .t_l_time{
@@ -80,8 +80,10 @@
                     }
                 }
                 .t_m_serch{
-                    height: 30px;
                     margin-left: 5px;
+                    .ant-btn-primary{
+                        height: 30px;
+                    }
                     &:hover{
                         cursor: pointer;
                     }
@@ -104,11 +106,11 @@
     }
     .t_l_table{
         background-color: #F4F4F4;
-        padding: 10px 8px 50px;
+        padding: 10px 12px 50px;
         .t_l_table_list{
             border: 1px solid #ccc;
             background-color: #fff;
-            padding: 5px;
+            padding:8px 5px;
         }
         .t_l_page{
             float: right;
