--- a/src/Components/Account/Marketing/Marketing.scss
+++ b/src/Components/Account/Marketing/Marketing.scss
@@ -82,7 +82,7 @@
     .t_l_table_list{
         border: 1px solid #ccc;
         background-color: #fff;
-        padding: 10px;
+        padding: 8px 5px;
     }
     .ant-btn-lg{
         padding: 4px 26px 5px 26px;
