--- a/src/Components/Account/TeamList/TeamList.scss
+++ b/src/Components/Account/TeamList/TeamList.scss
@@ -47,14 +47,14 @@ $border-color: #B2B2B2;
     }
     .t_l_table{
         background-color: #F4F4F4;
-        padding: 0 8px 50px;
+        padding: 0 12px 50px;
         .t_l_location_name{
             @include lh(50px);
         }
         .t_l_table_list{
             border: 1px solid #ccc;
             background-color: #fff;
-            padding: 5px;
+            padding: 8px 5px;
         }
     }
     .ant-table-expanded-row{
