--- a/src/Components/Financial/Common/CommonSelect.scss
+++ b/src/Components/Financial/Common/CommonSelect.scss
@@ -3,7 +3,7 @@
 
 .mention_filling_record{
     .team_list_top{
-        padding: 30px 20px 13px;
+        padding: 30px 30px 13px;
         border-bottom: 1px solid #ccc;
         .t_l_time{
             padding-bottom: 15px;
@@ -61,11 +61,11 @@
     }
     .t_l_table{
         background-color: #F4F4F4;
-        padding: 10px 8px 50px;
+        padding: 10px 12px 50px;
         .t_l_table_list{
             border: 1px solid #ccc;
             background-color: #fff;
-            padding: 5px;
+            padding:8px  5px;
         }
         .t_l_page{
             float: right;
