--- a/src/Components/Lottery/ContentMain/ContentMain.scss
+++ b/src/Components/Lottery/ContentMain/ContentMain.scss
@@ -12,14 +12,12 @@ $c_m_background: #4A4A5F;
         background-image: url('./Img/nav_bg.jpg');
         @include lh(42px);
         .c_m_nav_list{
-            position: absolute;
-            top: -2px;
             @include wh(835px,44px);
             padding-left: 12px;
             li{
                 float: left;
                 padding: 0 15px;
-                font-size: 13px;
+                font-size: 14px;
                 color:#fff;
                 &:hover{
                     background-color: #fff;
@@ -28,10 +26,18 @@ $c_m_background: #4A4A5F;
                 }
             }
             .nav_list_active{
+                position: relative;
                 box-sizing: border-box;
                 background-color: #fff;
                 color:#C5A05A;
-                border-top: 2px solid #C19A51;
+                &:before{
+                    content: '';
+                    position: absolute;
+                    top:-2px;
+                    left: 0;
+                    width: 100%;
+                    border-top: 2px solid #C19A51;
+                }
             }
             .hvr-float:active, .hvr-float:focus, .hvr-float:hover {
                 -webkit-transform: translateY(-2px) !important;
@@ -51,6 +57,7 @@ $c_m_background: #4A4A5F;
             text-align: center;
             background-color: #00B28F;
             color:#fff;
+            font-size: 14px;
             &:hover {
                 cursor: pointer;
             }
@@ -83,8 +90,11 @@ $c_m_background: #4A4A5F;
             padding: 20px 15px 10px 20px;
             background-color: #fff;
             border-bottom: 1px solid #D6D6D6;
-            .c_m_metho_type{
+            .c_m_method_type{
                 margin-bottom: 10px;
+                &>span{
+                    font-size: 14px;
+                }
             }
             span{
                 display: inline-block;
@@ -116,9 +126,13 @@ $c_m_background: #4A4A5F;
                 right:0;
                 bottom:20px;
                 color:#3F3F3F;
+                margin-right: 14px;
                 .ant-select-arrow{
                     top: 30% !important;
                     right: -10px !important;
+                }
+                .ant-select-selection--single{
+                    @include gradient(0, 18.5, 0, bottom, #fff, rgba(225, 225, 225, 0.8));
                 }
             }
         }
@@ -153,10 +167,11 @@ $c_m_background: #4A4A5F;
                     .active{
                         background: #D9B673;
                         @include borderRadius(2px);
-                        @include wh(37px, 20px);
+                        height: 20px;
                         line-height: 20px;
                         text-align: center;
                         margin-top: 2px;
+                        @include gradient(0, 6.5, 0, bottom, #D9B673, #C49F58);
                     }
                 }
                 .c_m_select_name{
@@ -172,7 +187,7 @@ $c_m_background: #4A4A5F;
                     @include wh(30px, 24px);
                     padding: 0;
                     margin-right: 10px;
-                    @include boxS(0, -3px, 5px, 0, #E3E3E3, inset);
+                    @include gradient(0, 16.5, 0, bottom, #fff, #E3E3E3);
                 }
                 .c_m_select_title_right{
                     span{
@@ -281,7 +296,7 @@ $c_m_background: #4A4A5F;
                         text-align: center;
                         color:$c_m_background;
                         margin: 0 5px;
-                        @include boxS(0, 2px, 5px, 0, #bfbcbc, inset);
+                        @include gradient(0, 0, 0, 5, #D4D4D4, #fff);
                     }
                     img{
                         vertical-align: middle;
@@ -314,11 +329,15 @@ $c_m_background: #4A4A5F;
                             @include borderRadius(2px);
                             background: #F1F4F3;
                             color: #000;
+                            @include gradient(0, 10.5, 0, bottom, #fff, #E6EBEA);
                         }
                     }
                 }
                 .c_m_future_expect{
                     margin-left: 20px;
+                    .ant-select-selection--single{
+                        @include gradient(0, 18.5, 0, bottom, #fff, rgba(228, 228, 228, 0.8));
+                    }
                 }
 
             }
