--- a/src/Style/mixin.scss
+++ b/src/Style/mixin.scss
@@ -23,7 +23,7 @@ $fc:#fff;
     -moz-box-shadow: $h $v $blur $spread $color $inset;
 }
 
-@mixin gradient($start, $end, $sColor, $endR, $endG, $endB, $endA){
+@mixin gradientsss($start, $end, $sColor, $endR, $endG, $endB, $endA){
     background: #ccc;
     background: -moz-linear-gradient(top,  #000000 0%, #ffffff 100%);
     background: -webkit-gradient(linear, 0 18.5, 0 bottom, from(#ffffff), to(rgba(225, 225, 225, 0.8)));
@@ -32,6 +32,10 @@ $fc:#fff;
     background: -ms-linear-gradient(top,  #000000 0%,#ffffff 100%);
     background: linear-gradient(to bottom,  #000000 0%,#ffffff 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#ffffff',GradientType=0 );
+}
+
+@mixin gradient($startX, $startY, $endX, $endY, $startColor, $endColor){
+    background: -webkit-gradient(linear, $startX $startY, $endX $endY, from($startColor), to($endColor));
 }
 
 //倒三角形
