--- a/src/Style/vender/antd.css
+++ b/src/Style/vender/antd.css
@@ -14600,7 +14600,7 @@ textarea.ant-pagination-options-quick-jumper input {
   margin-left: -4px;
 }
 .ant-slider-dot-active {
-  border-color: #88c7f4;
+  border-color: #cf421b;
 }
 .ant-slider-disabled {
   background-color: #e9e9e9 !important;
